# AI-Research-Innovation-Assistant

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  a.py  b.py  docker-compose.yml  dockerfile  pyproject.toml  report.md  report_reviewed.md  requirements.txt
aria/: .gitignore  README.md  pyproject.toml  requirements.txt
aria/src/: crew.py  main.py  report.md
aria/src/config/: agents.yaml  tasks.yaml
aria/src/tools/: review_tools.py  scholar_tool.py
src/aria/: crew.py  main.py
src/tools/: fact_check_tool.py  summarizer.py  writer_tools.py
tests/: test_health_systems.py
