[project]
name = "aria"
version = "0.2.0"
description = "ARIA using crewAI with comprehensive health monitoring and 503 error prevention"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
aria = "aria.main:main"
run_crew = "aria.main:main"
aria_server = "aria.server:main"
aria_health = "aria.health:main"
aria_validate = "aria.validation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
