[project]
name = "aria"
version = "0.1.0"
description = "ARIA using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
aria = "aria.main:run"
run_crew = "aria.main:run"
train = "aria.main:train"
replay = "aria.main:replay"
test = "aria.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
